Ajustes para implementar Front
Se suben varios ajustes relacionados con la manera en que responden los APIs para poder leer y administrar mejor la info desde el front y la respuesta a sus peticiones; toda la información dentro de los commits del front https://github.com/EduaRuiz/C1-2023-Angular-frontend-Colombia.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,24 @@
   "material-icon-theme.folders.theme": "specific",
   "explorer.compactFolders": false,
   "jest.autoRun": "off",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#6de731",
+    "activityBar.background": "#6de731",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#5486eb",
+    "activityBarBadge.foreground": "#15202b",
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#6de731",
+    "statusBar.background": "#54cd18",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#419f13",
+    "statusBarItem.remoteBackground": "#54cd18",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#54cd18",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#54cd1899",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.color": "#54cd18",
 }
