--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "firebase-admin": "^11.5.0",
+    "google-auth-library": "^8.7.0",
     "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -43,6 +47,7 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
